cmake_minimum_required(VERSION 3.17)
project(Lab)

set(CMAKE_CXX_STANDARD 11)

add_executable(Lab1 main.cpp)
add_executable(Lab8_1 lab_08/lab08_01.cpp)
add_executable(Lab8_2 lab_08/lab08_02.cpp)
add_executable(Lab9_1 lab_09/lab09_01.cpp)
add_executable(Lab9_2 lab_09/lab09_02.cpp)
add_executable(Lab9_3 lab_09/lab09_03.cpp)
add_executable(Lab10_1 lab_10/lab10_01.cpp)
add_executable(Lab10_2 lab_10/lab10_02.cpp)
add_executable(Lab10_3 lab_10/lab10_03.cpp)
add_executable(Lab10_4 lab_10/lab10_04.cpp)
add_executable(Lab10_5 lab_10/lab10_05.cpp)
add_executable(Lab11_1 lab_11/lab11_01.cpp)
add_executable(Lab11_2 lab_11/lab11_02.cpp)
add_executable(Lab12_1 lab_12/lab12_1.cpp)
add_executable(Lab12_2 lab_12/lab12_2.cpp)
add_executable(Lab12_3 lab_12/lab12_3.cpp)

add_executable(Lab13_1 lab_13/lab13_1.cpp lab_13/lab13_3.cpp)
add_executable(Lab13_2 lab_13/lab13_2.cpp)

add_executable(Lab4 chaos/test.cpp)
add_executable(Lab5 chaos/test2.cpp)
add_executable(Lab6 chaos/convert.cpp)

add_executable(Chapter1 endExam/chapter-1/perm.cpp)
add_executable(Chapter2 endExam/chapter-2/sorts.cpp)
add_executable(Chapter3 main.cpp)
add_executable(Chapter4 main.cpp)
add_executable(Chapter5 main.cpp)
add_executable(Chapter6 main.cpp)
add_executable(Chapter7 main.cpp)
add_executable(Chapter8 main.cpp)
add_executable(Chapter19 endExam/chapter-19/bagDP.cpp )
add_executable(Chapter19-1 endExam/chapter-19/floy.cpp)

